--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "^4.21.3",
     "craco-less": "^2.0.0",
     "enquire-js": "^0.2.1",
+    "gsap": "^3.10.4",
     "rc-queue-anim": "^2.0.0",
     "rc-scroll-anim": "^2.7.6",
     "rc-texty": "^0.2.0",
